--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -20,11 +20,19 @@ read_graphviz_chunk("team-structures", package = "gems",
 
 # Introduction {-}
 
-People can work together in teams to solve many kinds of problems. What is the
-impact of teamwork on the problem solving abilities of the people in the team?
-Does working in a team ever improve problem solving ability? The purpose of this
-research was to test the conditions under which teamwork might improve
-individual problem solving ability.
+One of the fundamental processes in cultural evolution is the transmission of
+problem solving knowledge from one generation to the next. Cultural
+transmission is notoriously imperfect compared to, e.g., genetic transmission.
+Yet the human ability to transmit cultural information far exceeds the
+abilities of any non-human animals. Humans have evolved a number of abilities
+that improve the success of cultural transmission, including teaching,
+language, and other social learning abilities. These abilities enable the high
+fidelity reproduction of innovations over generations.
+
+A consequence of our system of cultural inheritance is that problem solvers
+rarely have to start from scratch when solving new problems. Instead, they can
+start with solutions inherited from a previous generation. Does inheritance
+influence future problem solving?
 
 There are many ways to measure the effectiveness of teamwork. A common method
 is to compare the performance of teams to individuals working alone. When
