--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -24,18 +24,17 @@ read_graphviz_chunk("team-structures", package = "gems",
 # Introduction {-}
 
 One of the fundamental processes in cultural evolution is the transmission of
-problem solving knowledge from one generation to the next. Cultural
-transmission is notoriously imperfect compared to, e.g., genetic transmission.
-Yet the human ability to transmit cultural information far exceeds the
-abilities of any non-human animals. Humans have evolved a number of abilities
-that improve the success of cultural transmission, including teaching,
-language, and other social learning abilities. These abilities enable the high
-fidelity reproduction of innovations over generations.
+problem solving knowledge from one generation to the next. Cultural transmission
+is notoriously imperfect compared to, e.g., genetic transmission. Yet the human
+ability to transmit cultural information far exceeds the abilities of any
+non-human animals. Humans have evolved a number of abilities that improve the
+success of cultural transmission, including teaching, language, and other social
+learning abilities. These abilities enable the high fidelity reproduction of
+innovations over generations.
 
 A consequence of our system of cultural inheritance is that problem solvers
-rarely have to start from scratch when solving new problems. Instead, they can
-start with solutions inherited from a previous generation. Does inheritance
-influence future problem solving?
+rarely have to start from scratch when solving new problems. Instead, they start
+off with the solutions that were inherited from a previous generation.
 
 There are many ways to measure the effectiveness of teamwork. A common method
 is to compare the performance of teams to individuals working alone. When
@@ -76,45 +75,49 @@ an hour to complete the same task. However, controlling for calendar hours does
 not scale with team size. Individuals and teams are both given an hour,
 regardless of the size of the team.
 
-# Methods {-}
+In the experiment, we compare three strategies for solving the same problem.
 
+# Methods {-}
 ```{r methods}
 ```
 
 Participants completed a perceptual discrimination task where they were
-presented displays of gabor patches that varied in orientation and
-spatial frequency. We asked them to think of the gabor patches as 
-"gems" on a foreign planet, and their job was to figure out which
-gems were more valuable than others.
+presented displays of sinusoidal gabor patches that varied in orientation and
+spatial frequency. We asked them to think of the gabor patches as "gems"
+existing on a foreign planet. Their job was to figure out which gems were
+more valuable than others.
 
 The value of each gem was determined by the orientation and spatial frequency
 of the gabor patch stimuli. The space of possible gems and their associated
 values can be visualized as a three dimensional landscape. As participants
 selected gems across trials, they effectively explored different parts
-of the landscape, looking for the highest peaks in the landscape, corresponding
+of this landscape, looking for the highest peaks, corresponding
 to the most valuable gems.
 
-The six gabors presented on each trial were sampled within a certain radius of
-the gabor selected on the previous trial. As a result, in order to find the
-most valuable gems, participants had to move through the stimulus space
-in incremental steps.
+On each trial, participants selected one of six gabor patches they thought
+was the most valuable. The six gabors presented on each trial were sampled
+within a radial distance in stimulus space of the gabor selected on the previous
+trial. As a result, in order to find the most valuable gems, participants had to
+move through the stimulus space in a series of incremental steps.
 
 Participants were trained to pay attention to either the orientation or the bar
-width of the gems. They read instructions to pay attention to
-either the orientation or the bar width, and they also completed 30 trials
-on a training landscape that was designed to value one stimulus dimension but
-not the other. The training procedure is described below.
+width of the gems. The training procedure consisted of written instructions
+and 30 training trials. The instructions told participants that the value of
+the gems was determined by either the orientation or the bar width. The training
+trials were completed on a landscape that was designed to value the trained
+stimulus dimension but not the untrained dimension. The training procedure
+is described in more detail below.
 
 Participants were also assigned to the first or second generation.
-First generation participants started at the origin on each landscape.
-Second generation participants inherited the location on the landscape of the
-gem selected by a first generation participant after 20 trials. There was no
+First generation participants started at the origin `(0,0)` on each landscape.
+Second generation participants started at the location on the landscape of the
+gem selected by a first generation participant. There was no
 interaction between first and second generation participants other than that
 second generation participants started each landscape off in a different part
 of the landscape than their predecessors.
 
-In our analyses, we were interested in a comparison of three types
-of problem solving strategies (Fig. \@ref(fig:gems-team-strategies)). Congruent
+In our analyses, we were interested in the comparison of three problem solving
+strategies (Fig. \@ref(fig:gems-team-strategies)). Congruent
 teams were made of participants trained to pay attention to the same stimulus
 dimension---either orientation or bar width. Complementary teams were made of
 participants trained on different stimulus dimensions. As a control, we also
@@ -134,13 +137,13 @@ a first generation participant.
 
 ### Gabors {-}
 
-We created `r methods$n_gabors_in_landscape` gabor patches that varied in
-orientation and spatial frequency. A sample of the space is shown in Fig.
-\@ref(fig:gabors). Orientations were sampled at regular intervals from
-`r methods$min_ori`° to `r methods$max_ori`°. Spatial frequencies were sampled 
-at geometric intervals from `r methods$min_sf` cycles/pixel to
-`r methods$max_sf` cycles/pixel. A geometric progression was used because high
-spatial frequencies are harder to distinguish than low spatial frequencies.
+We created a 71x71 grid of `r methods$n_gabors_in_landscape` gabor patches that
+varied in orientation and spatial frequency. A sample of the space is shown in
+Fig. \@ref(fig:gabors). Orientations were sampled at regular intervals from
+`r methods$min_ori`° to `r methods$max_ori`°. Spatial frequencies were sampled at
+geometric intervals from `r methods$min_sf` cycles/pixel to `r methods$max_sf`
+cycles/pixel. A geometric progression was used because high spatial frequencies
+are harder to distinguish than low spatial frequencies.
 
 (ref:gabors) Sampled space of possible gabor patches. Gabor patches varied
 in orientation and spatial frequency.
@@ -151,17 +154,19 @@ draw_image("SimpleHillGems", package = "gems")
 
 ### Solution landscapes {-}
 
-We created three different landscapes. There were two different training
+We created three different solution landscapes, shown in Fig.
+\@ref(fig:landscapes). There were two different training
 landscapes, and one test landscape. The training landscapes were constructed so
 that the value of a gem was determined completely by one dimension (either
-orientation or spatial frequency) and not influenced by the other dimension.
+orientation or spatial frequency) and not influenced by the other dimension. For
+these landscapes, the peak value was set at 50 units in either stimulus dimension.
 Values in the test landscape were determined by both orientation and spatial
-frequency. The training and test landscapes are shown in Fig.
-\@ref(fig:landscapes).
+frequency, corresponding to a simple hill landscape with a single peak at `(50,50)`.
 
-(ref:landscapes) Participants assigned to the orientation or bar width
-condition completed the training trials on the corresponding landscape.
-All participants completed the test trials on the same landscape.
+(ref:landscapes) Training and test landscapes. Participants assigned to the
+orientation or bar width condition completed the training trials on the
+corresponding landscape. All participants completed the test trials on the same
+simple hill landscape.
 
 ```{r landscapes, fig.width=8, fig.cap="(ref:landscapes)"}
 gridExtra::grid.arrange(
@@ -178,8 +183,8 @@ After finishing the main experiment, participants completed a short survey.
 We asked the participants about the instructions they received, how they
 approached the experiment, and to what extent they thought the gems and
 scores were random. We were particularly interested in if the
-participants felt they were moving around the solution landscape.
-The questions are listed in Table \@ref(tab:survey-questions).
+participants felt they were moving around space of possible gabors
+of their own volition. The questions are listed in Table \@ref(tab:survey-questions).
 
 (ref:survey-questions) Questions asked in the post-experiment survey.
 
@@ -195,43 +200,34 @@ data_frame(question_text = colnames(Survey)) %>%
 
 ## Procedure {-}
 
-Participants played a computer game where they pretended to be a space explorer
-who travels to another planet to collect precious gems. The goal of the game
-was to discover which gems are valued the most.
-
-Participants completed a block of 30 training trials followed by four blocks
-of 40 test trials. After completing all trials, participants were given
-a post-experiment survey. The experiment took around 30 minutes
-to complete.
+Participants read the instructions corresponding to their randomly assigned
+training condition, and completed a block of 30 training trials. After the
+training trials, they completed four blocks of 40 test trials. After all four
+blocks of test trials, participants completed the post-experiment survey. The
+experiment took around 30 minutes to complete.
 
 ### Training {-}
 
 Participants were randomly assigned to one of two training conditions. In the
 orientation condition, participants were told that the value of each gem
 was determined by the orientation of the stripes. In the bar width condition,
-they were told the value was determined by the width of the bars.
+they were told the value was determined by the width of the bars. The exact
+instructions are shown in Fig. \@ref(fig:training).
 
-```{r training, fig.width=8}
-gridExtra::grid.arrange(
-  crotchet::read_image("training_orientation", package = "gems"),
-  crotchet::read_image("training_spatial_frequency", package = "gems"),
-  nrow = 1
-)
-```
-
-After reading the training instructions, participants completed a block of 30
-training trials on a training landscape corresponding to their
-instructions condition. For example, a participant who was instructed to pay
-attention to bar width completed the training trials on the landscape that was
-biased so that the values of the gems were dependent completely on spatial
-frequency and not on orientation.
+After reading the instructions, participants completed a block of 30 training
+trials on a landscape corresponding to their instructions condition. For
+example, a participant who was instructed to pay attention to bar width
+completed the training trials on the landscape that was biased so that the
+values of the gems were dependent completely on spatial frequency and not on
+orientation.
 
 For the training trials, after each choice, participants were shown the values
 of all the gems in the display, and had to click on the most valuable
 gem to continue to the next trial. This second response was to encourage
 participants to learn which gabors were the most valuable. If the participant
-correctly selected the most valuable gem, they were told to
-click on the gem they selected again.
+had correctly selected the most valuable gem in their first response, they were told to
+click on the gem they selected again. An example training trial is shown
+in Fig. \@ref(fig:training-trial).
 
 ### Test {-}
 
@@ -239,11 +235,12 @@ After completing the training trials, participants completed four blocks of 40
 trials. All test trials were conducted on the test landscape, described above.
 Participants traversed the same landscape four times.
 
-First generation participants started off at the origin for each block. Second
-generation participants started off at the location of a randomly selected first
+First generation participants started off at the origin `(0,0)` for each block. Second
+generation participants started off at the location of a first
 generation participant after 20 trials. First and second generation participants
 were yoked over blocks such that second generation participants inherited from
-the same first generation participant at the start of each new block.
+the same first generation participant a total of four times, one for each
+block.
 
 ## Participants {-}
 
@@ -255,7 +252,6 @@ each first generation participant was yoked to two second generation
 participants, one in each training condition.
 
 # Results {-}
-
 ```{r results}
 ```
 
@@ -267,8 +263,8 @@ or the spatial frequency bias landscape. As expected, participants in either tra
 condition moved through the same stimulus space in orthogonal directions
 (Fig. \@ref(fig:gems-training)).
 
-(ref:gems-training) Results of training procedure. Participants were randomly assigned to either
-the orientation or the spatial frequency condition.
+(ref:gems-training) Results of training procedure. Participants were randomly
+assigned to either the orientation or the spatial frequency condition.
 
 ```{r gems-training, fig.width=10, fig.height=4, fig.cap="(ref:gems-training)"}
 gridExtra::grid.arrange(
@@ -283,15 +279,10 @@ gridExtra::grid.arrange(
 
 ```{r gems-training-sensitivities, fig.width=8, fig.height=3, fig.cap="(ref:gems-training-sensitivities)"}
 gridExtra::grid.arrange(
-  score_sensitivity_plot +
-    theme(legend.position = c(0.4, 0.8)) +
-    ggtitle("A. Score"),
-  orientation_sensitivity_plot +
-    theme(legend.position = "none") +
-    ggtitle("B. Orientation"),
-  spatial_frequency_sensitivity_plot +
-    theme(legend.position = "none") +
-    ggtitle("C. Spatial frequency"),
+  training_sensitivity_ori_plot +
+    ggtitle("A. Sensitivity to orientation"),
+  training_sensitivity_sf_plot +
+    ggtitle("B. Sensitivity to spatial frequency"),
   nrow = 1
 )
 ```
@@ -373,3 +364,39 @@ gridExtra::grid.arrange(
 ```
 
 # Discussion {-}
+
+# Appendix {-}
+
+(ref:training) Exact instructions given to participants in either training condition. The instructions differ in the first paragraph and in the sample gabors shown
+on the screen.
+
+```{r training, fig.width=8, fig.cap="(ref:training)"}
+gridExtra::grid.arrange(
+  crotchet::read_image("training_orientation", package = "gems"),
+  crotchet::read_image("training_spatial_frequency", package = "gems"),
+  nrow = 1
+)
+```
+
+(ref:training-trial) Training trial procedure. Participants received
+feedback in the form of relative changes in their score for each of
+the six stimuli on a trial.
+
+```{r training-trial, fig.width=8, fig.cap="(ref:training-trial)"}
+gridExtra::grid.arrange(
+  crotchet::read_image("training_trial", package = "gems"),
+  crotchet::read_image("training_trial_feedback", package = "gems"),
+  nrow = 1
+)
+```
+
+(ref:test-trial) Test trial procedure. Participants received feedback in the
+form of the relative change in their score after each selection.
+
+```{r test-trial, fig.width=8, fig.cap="(ref:test-trial)"}
+gridExtra::grid.arrange(
+  crotchet::read_image("test_trial", package = "gems"),
+  crotchet::read_image("test_trial_feedback", package = "gems"),
+  nrow = 1
+)
+```
